--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1597,17 +1597,40 @@ ul.get-more-questions-menu {
                     text-align: right;
                     top: 0;
                     width: 50%;
+                    @include single-box-shadow(darken($inactive_bg, 30), 0px, 1px, 4px);
                     &.closed {
                         background: none;
                         border: 0;
+                        @include single-box-shadow(none);
+                        h5 {
+                            padding: 5px 6px 8px;
+                            &::after {
+                                top: 16px;
+                                @include rotate(135deg);
+                            }
+                        }
                         ul {
                             display: none;
                         }
                     }
                     h5 {
                         color: $link-green;
-                        padding: 4px 0 8px;
-                        text-decoration: underline;
+                        padding: 4px 5px 8px 6px;
+                        &::after {
+                            border-color: $link-green;
+                            border-style: solid;
+                            border-width: 2px 2px 0 0;
+                            color: #fff;
+                            content: " \a0";
+                            display: inline-block;
+                            height: 4px;
+                            position: absolute;
+                            right: 6px;
+                            top: 17px;
+                            vertical-align: middle;
+                            width: 4px;
+                            @include rotate(-45deg);
+                        }
                     }
                     &.none h5 {
                         display: none;
@@ -1670,13 +1693,21 @@ ul.get-more-questions-menu {
                     position: static;
                     text-align: left;
                     width: 100%;
-                    &.closed ul {
-                        display: block;
+                    &.closed {
+                        h5::after {
+                            display: none;
+                        }
+                        ul {
+                            display: block;
+                        }
                     }
                     h5 {
                         color: #000;
-                        padding: 4px 0;
+                        padding: 5px 0;
                         text-decoration: none;
+                        &::after {
+                            display: none;
+                        }
                     }
                 }
             }
