Add a switch for overriding the default list view on small screens. (#308)

--- a/gobotany/simplekey/templates/level3_test_links.html
+++ b/gobotany/simplekey/templates/level3_test_links.html
@@ -12,7 +12,7 @@
                 border-bottom: 1px solid #c3d941;
                 text-decoration: none;
             }
-            h2 + p a, h2 + p + p a, li a {
+            p a, li a {
                 font-weight: bold;
             }
             dt {
@@ -50,13 +50,19 @@
             <a target="_blank"
                 href="/simple/woody-plants/woody-angiosperms/?m=mobile-inline">inline</a>
         </p>
-        <p><del>split</del>
-            |
+        <p>
             <a target="_blank"
                 href="/simple/woody-plants/woody-angiosperms/?m=mobile-gloss">overlay+gloss</a>
             |
             <a target="_blank"
                 href="/simple/woody-plants/woody-angiosperms/?m=mobile-inline%20mobile-gloss">inline+gloss</a>
+        </p>
+        <p>
+            <a target="_blank"
+                href="/simple/woody-plants/woody-angiosperms/?m=mobile-gloss%20mobile-photos">overlay+gloss+photos</a>
+            |
+            <a target="_blank"
+                href="/simple/woody-plants/woody-angiosperms/?m=mobile-inline%20mobile-gloss%20mobile-photos">inline+gloss+photos</a>
         </p>
 
         <h2>Needle-leaved woody plants</h2>
@@ -68,13 +74,19 @@
             <a target="_blank"
                 href="/simple/woody-plants/woody-gymnosperms/?m=mobile-inline">inline</a>
         </p>
-        <p><del>split</del>
-            |
+        <p>
             <a target="_blank"
                 href="/simple/woody-plants/woody-gymnosperms/?m=mobile-gloss">overlay+gloss</a>
             |
             <a target="_blank"
                 href="/simple/woody-plants/woody-gymnosperms/?m=mobile-inline%20mobile-gloss">inline+gloss</a>
+        </p>
+        <p>
+            <a target="_blank"
+                href="/simple/woody-plants/woody-gymnosperms/?m=mobile-gloss%20mobile-photos">overlay+gloss+photos</a>
+            |
+            <a target="_blank"
+                href="/simple/woody-plants/woody-gymnosperms/?m=mobile-inline%20mobile-gloss%20mobile-photos">inline+gloss+photos</a>
         </p>
 
         <h2>About the variations</h2>
@@ -95,6 +107,10 @@
             <dt>+gloss</dt>
             <dd>glossary terms are available within the question working
             area</dd>
+
+            <dt>+photos</dt>
+            <dd>photos view is the default on small screens (instead of
+            list view)</dd>
         </dl>
 
         {% comment %}
