--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -1,5 +1,7 @@
 /* Styles for taxa (family, genus, species) pages */
 
+@import "_common";
+
 @mixin taxa-list {
     font-size: 14px;
     list-style: none;
@@ -311,24 +313,18 @@ body.taxa {
 	            top: -22px;	
             }
         }
-        /* TODO: resolve the two following sections */
-        #species-images {
-            border: 5px solid rgba(255, 255, 255, 0.8);
-            position: absolute;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
-            -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
-            -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
-        }
         /* Smooth Div Scroll image area */
         #species-images {
+            border: 5px solid rgba(255, 255, 255, 0.8);
             height: 239px;
             margin: 0 0 20px 0;
             overflow: hidden;
             position: relative;
+            top: 0;
             width: 700px;
-            div.scrollableArea a {
+            z-index: 100;
+            @include box-shadow (0px 0px 4px rgba(0, 0, 0, 0.6));
+            .scrollableArea a {
                 border-right: 5px solid #fff;
                 float: left;
                 margin: 0;
@@ -394,6 +390,18 @@ $mini-table-font-size: 10px;
             }
         }
         &#species {
+            #species-images {
+                border: 0;
+                height: 120px;
+                @include box-shadow(none);
+                .scrollableArea a {
+                    border-right: 20px solid $body_bg;
+                    img {
+                        height: 120px;
+                        width: 120px;
+                    }
+                }
+            }
             #main p {
                 margin-bottom: 10px;
             }
