Simplify Distribution and Conservation Status on species page.
Before, a wide table had states across the top and statuses across the left,
with values filled in where the existed and dashed where they did not. This
was intended to allow quick lookup and also to give a sense of what all the
available values were. However, this was wide and required horizontal
scrolling on smartphones, and user testing results suggested opting for a
simpler presentation that did not require scrolling. Now a simple list of
states with their distribution and status code is presented, which slims
down just like the Characteristics section on smartphones. (#308)

--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -162,54 +162,17 @@
                 <p>Exact status definitions can vary from state to
                 state. For details, please check with your state.</p>
                 <div id="ne-status">
-                {% with conservation_matrix=taxon.get_conservation_statuses %}
-                <table>
-                    <thead>
-                        <tr>
-                            <td></td>
-                            {% for state_name in conservation_matrix.keys %}
-                            <th>{{ state_name }}</th>
-                            {% endfor %}
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th>Present?</th>
-                            {% for statuses in conservation_matrix.values %}
-                            <td>
-                                {% if 'present' in statuses %}
-                                present
-                                {% else %}
-                                -
-                                {% endif %}
-                            </td>
-                            {% endfor %}
-                        </tr>
-                        <tr>
-                            <th>Conservation Status:</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        {% for status_name in conservation_status_rows %}
-                            <tr>
-                                <th class="status">{{ status_name|capfirst }}?</th>
-                                {% for statuses in conservation_matrix.values %}
-                                <td>
-                                    {% if status_name in statuses %}
-                                    {{ status_name }}
-                                    {% else %}
-                                    -
-                                    {% endif %}
-                                </td>
-                                {% endfor %}
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                {% with statuses=taxon.get_distribution_and_conservation_statuses %}
+                    <div class="characteristics">
+                    {% for state_name, values in statuses.items %}
+                        <dl>
+                            <dt>{{ state_name }}</dt>
+                            <dd>
+                            {{ values|join:", " }}
+                            </dd>
+                        </dl>
+                    {% endfor %}
+                </div>
                 {% endwith %}
                 </div>
 
